--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tomphttp/bare-server-node": "^2.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.1",
+    "node-fetch": "^2.7.0",
     "yarn": "^1.22.22"
   },
   "engines": {
